--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                         <p class="FormTxt">Campus Sainte Thérèse - Ozoir la Ferrière</p>
                     </div>
                 </div>
+            <h2 class="h2right">Expérience professionnelle</h2>
         </div>
     </main>
     <div class="foot"><footer>
