--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
     <main>
         <div class="blocleft">
             <h2 class="h2left">Compétences</h2>
+                <div class="skills">
+                    <input type="radio" name="star-rate" id="star1" value="1">
+                    <input type="radio" name="star-rate" id="star2" value="2">
+                    <input type="radio" name="star-rate" id="star3" value="3">
+                    <input type="radio" name="star-rate" id="star4" value="4">
+                    <input type="radio" name="star-rate" id="star5" value="5">
+                </div>
         </div>
         <div class="blocright">
             <h2 class="h2right">Profil</h2>
