--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta http-equiv="X-UA-Compatible" content="IE-Edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="stylesheet" href="./assets/css/style-start.css">
     <title>CV Developpeur Web</title>
     <meta name= "description" content="CV Developpeur Web et Web Mobile">
@@ -35,12 +35,42 @@
         <div class="blocleft">
             <h2 class="h2left">Compétences</h2>
                 <div class="skills">
-                    <input type="radio" name="star-rate" id="star1" value="1">
-                    <input type="radio" name="star-rate" id="star2" value="2">
-                    <input type="radio" name="star-rate" id="star3" value="3">
-                    <input type="radio" name="star-rate" id="star4" value="4">
-                    <input type="radio" name="star-rate" id="star5" value="5">
+                    <div class="RateTxt">Administration TOIP</div>
+                    <div class="Rating">
+                        <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9734;</span>
+                    </div>
                 </div>
+                <div class="skills">
+                    <div class="RateTxt">HTML</div>
+                    <div class="Rating">
+                        <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9734;</span><span class="star">&#9734;</span>
+                    </div>
+                </div>
+                <div class="skills">
+                    <div class="RateTxt">CSS</div>
+                    <div class="Rating">
+                        <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9734;</span><span class="star">&#9734;</span>
+                    </div>
+                </div>
+                <div class="skills">      
+                    <div class="RateTxt">Javascript</div>
+                    <div class="Rating">
+                        <span class="star">&#9734;</span><span class="star">&#9734;</span><span class="star">&#9734;</span><span class="star">&#9734;</span><span class="star">&#9734;</span>
+                    </div>
+                </div>
+                <div class="skills">      
+                    <div class="RateTxt">PHP</div>
+                    <div class="Rating">
+                        <span class="star">&#9734;</span><span class="star">&#9734;</span><span class="star">&#9734;</span><span class="star">&#9734;</span><span class="star">&#9734;</span>
+                    </div>
+                </div>
+                <div class="skills">      
+                    <div class="RateTxt">Microsoft Office</div>
+                    <div class="Rating">
+                        <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9734;</span>
+                    </div>
+                </div>
+            <h2 class="h2left">Langues</h2>
         </div>
         <div class="blocright">
             <h2 class="h2right">Profil</h2>
