--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header>
-        <figure>
+        <picture>
             <img src="./assets/img/D-Buzer.jpg" alt="Ma photo de profil">
-        </figure>
+        </picture>
         <div class="InfoGen">
         <h1>david buzer</h1>
         <h2>Développeur Web et Web Mobile</h2><br>
@@ -40,6 +40,12 @@
                         <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9734;</span>
                     </div>
                 </div>
+                <div class="skills">      
+                    <div class="RateTxt">Microsoft Office</div>
+                    <div class="Rating">
+                        <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9734;</span>
+                    </div>
+                </div>
                 <div class="skills">
                     <div class="RateTxt">HTML</div>
                     <div class="Rating">
@@ -62,12 +68,6 @@
                     <div class="RateTxt">PHP</div>
                     <div class="Rating">
                         <span class="star">&#9734;</span><span class="star">&#9734;</span><span class="star">&#9734;</span><span class="star">&#9734;</span><span class="star">&#9734;</span>
-                    </div>
-                </div>
-                <div class="skills">      
-                    <div class="RateTxt">Microsoft Office</div>
-                    <div class="Rating">
-                        <span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9733;</span><span class="star">&#9734;</span>
                     </div>
                 </div>
             <h2 class="h2left">Langues</h2>
