--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="stylesheet" href="./assets/css/style-start.css">
+    <link rel="stylesheet" href="./assets/css/style-right.css">
+    <link rel="stylesheet" href="./assets/css/style-left.css">
     <title>CV Developpeur Web</title>
     <meta name= "description" content="CV Developpeur Web et Web Mobile">
 </head>
